--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    margin: 0;
     display: flex;
     flex-direction: column;
     font-family: 'Courier New', Courier, monospace;
+    background-image: linear-gradient(to right, #ff009f, #ff0087, #ff006e, #ff0056, #fe003e, #fe2730, #fc3c1f, #f84d05, #fb6a00, #fd8300, #fd9a00, #fdb000);
 }
 
 
@@ -22,15 +22,37 @@ header h1{
     display: flex;
     justify-content: center;
 }
-nav li{
+nav{
+    border: 1px solid;
     display: flex;
     justify-content: space-around;
-   background-color: red;
+    border-radius: 5px;   
+    margin: 10px;
+    
 }
+a {
+    height: auto;
+    width: auto;
+    text-decoration: none;
+    color: black;
+}
+a:hover{
+    background-color: gold;
+    color: crimson;
+    font-weight: bold;        
+    
+}
+
 div{
     border: 1px solid;  
     border-color: brown;
     margin-top: 10px;
     margin-bottom: 10px;
     height: 100px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+}
+h3{
+    margin: 0;
 }
